# webrtc-android-krisp-module

./: BUILD.gn  README.md  audio_frame_processor.cc  audio_frame_processor.hpp  krisp_audio_sdk_api_wrapper.cc  krisp_audio_sdk_api_wrapper.h  krisp_processor.cc  krisp_processor.hpp  krisp_processor_jni.cc  krisp_sdk.cc  krisp_sdk.h
java/src/org/webrtc/: KrispAudioProcessingFactory.java  KrispAudioProcessingImpl.java
krisp_c_api_include/: krisp-audio-api-definitions-c.h  krisp-audio-sdk-c.h  krisp-audio-sdk-nc-c.h  krisp-audio-sdk-vad-c.h
