import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")
import("//third_party/jni_zero/jni_zero.gni")
import("../webrtc.gni")

rtc_library("krisp_processor") {
   visibility = [ "*" ]
   configs += [ "../modules/audio_processing:apm_debug_dump", ]
   configs += [ "//build/config/android:hide_all_but_jni" ]
   defines = ["WEBRTC_ANDROID", "WEBRTC_POSIX",]
   sources = [
      "krisp_processor.cc",
      "krisp_processor_jni.cc",
      "krisp_audio_sdk_api_wrapper.cc", ]
   lib_dirs = []
   deps = [":generated_krisp_jni",
           ":krisp_java",
           "../rtc_base:logging",
           "../sdk/android:native_api_jni",
           "../modules/audio_processing:audio_processing",
   ]
}

rtc_android_library("krisp_java") {
  visibility = [ "*" ]
  sources = [
    "java/src/org/webrtc/KrispAudioProcessingImpl.java",]
  deps = ["//sdk/android:peerconnection_java",]
}

generate_jni("generated_krisp_jni") {
    sources = [ "java/src/org/webrtc/KrispAudioProcessingImpl.java",]
    namespace = "Krisp"
    jni_generator_include = "//sdk/android/src/jni/jni_generator_helper.h"
}
